refactor(controllers): Replace inline logic with domain method calls
- SecretaryController: Use secretary.cancelAppointmentForPatient()
- MedicalRecordService: Call appPrescriptionForPatient() on specialist
- TechnicianController: Use getFaultyMachineList() with machine list param
- RoomService: Delegate to secretary methods (handled elsewhere)
- InventoryService: Delegate to buyer.addResource()